fix font size in footer on mobile

--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ a:visited {
   }
 
   .footer p {
-    font-size: 12px;
+    font-size: 14px;
     margin: 5px 0 0;
     word-wrap: break-word;
     padding: 0 10px;
